cmake_minimum_required(VERSION 4.1)
project(c_study C)

set(CMAKE_C_STANDARD 11)
add_subdirectory(problem2-1)
add_subdirectory(problem2-2)
add_subdirectory(problem3-1)
add_subdirectory(problem4-3)
add_subdirectory(problem5-1)
add_subdirectory(problem7-1)
add_subdirectory(problem7-2)
add_subdirectory(problem7-3)
add_subdirectory(problem7-4)
add_subdirectory(problem8-1)
add_subdirectory(problem8-2)
add_subdirectory(problem8-3)
add_subdirectory(problem9-1)
add_subdirectory(problem11-1)
add_subdirectory(problem11-2)
add_subdirectory(problem13-1)
add_subdirectory(problem14-1)
add_subdirectory(problem16-1)
add_subdirectory(problem17-1)
